--- a/.github/workflows/test1.yml
+++ b/.github/workflows/test1.yml
@@ -24,6 +24,7 @@ jobs:
         
   print_this_ip:
     runs-on: ubuntu-latest
+    needs: get_this_ip
     steps:
     - run: |
         echo "The ip was: ${{ needs.get_this_ip.outputs.ip }}"
