--- a/.github/workflows/test1.yml
+++ b/.github/workflows/test1.yml
@@ -18,7 +18,10 @@ jobs:
         
   get_this_ip:
     runs-on: ubuntu-latest
+    outputs:
+      ip: ${{ steps.get_ip.outputs.ip }} 
     steps:
+    - id: get_ip
     - run: |
         ip=$(curl https://ipinfo.io/ip)
         echo "Shhh the ip is ${ip}"
