--- a/.github/workflows/test3.yml
+++ b/.github/workflows/test3.yml
@@ -21,13 +21,13 @@ jobs:
     runs-on: ubuntu-latest
     container:  "${{ github.event.inputs.docker_image }}"
     outputs:
-      python_path: "${{ steps.get_python_info.python_info.python_path }}"
-      python_version: "${{ steps.get_python_info.python_info.python_version }}"
+      python_path: ${{ steps.get_python_info.python_info.python_path }}
+      python_version: ${{ steps.get_python_info.python_info.python_version }}
     steps:
       - id: python_info
         shell: bash
         run: |
-          PY_P="$(which python3 2>/dev/nul || which python 2>/dev/null)"
+          PY_P="$(which python3 2>/dev/null || which python 2>/dev/null)"
           echo "::set-output name=python_path::${PY_P}" 
           if [[ -n ${PY_P} ]]; then 
             PY_VER=$("${PY_P}" --version 2>&1)
