--- a/.github/workflows/test3.yml
+++ b/.github/workflows/test3.yml
@@ -26,13 +26,13 @@ jobs:
     steps:
       - id: python_info
         run: |
+          yum install which -y || apt-get install which -y || dnf install which -y
           PY_P="$(which python3 2>/dev/null || which python 2>/dev/null)"
           if [ -n ${PY_P} ]; then 
             echo "::set-output name=python_path::${PY_P}" 
             PY_VER=$("${PY_P}" --version 2>&1)
             echo "::set-output name=python_version::${PY_VER}" 
           fi
-          true # force good exit
       
   print_python_info:
     runs-on: ubuntu-latest
