--- a/.github/workflows/test3.yml
+++ b/.github/workflows/test3.yml
@@ -26,7 +26,7 @@ jobs:
     steps:
       - id: python_info
         run: |
-          if [ ! which 2>/dev/null ]; then
+          if [ ! which sh ]; then
             yum install which -y || apt-get install which -y || dnf install which -y
           fi
           
