--- a/.github/workflows/test3.yml
+++ b/.github/workflows/test3.yml
@@ -26,8 +26,17 @@ jobs:
     steps:
       - id: python_info
         run: |
-          if [ ! which sh ]; then
-            yum install which -y || apt-get install which -y || dnf install which -y
+          if ! which sh; then
+            if yum --version; then
+              yum install which -y
+            else if dnf --version; then
+              dnf install which -y
+            else if apt-get --version; then
+              apt-get install which -y
+            else
+              echo "Don't know how to install which"
+              exit 33
+            fi
           fi
           
           PY_P="$(which python3 2>/dev/null || which python 2>/dev/null)"
