--- a/.github/workflows/test3.yml
+++ b/.github/workflows/test3.yml
@@ -50,7 +50,7 @@ jobs:
   print_python_info:
     runs-on: ubuntu-latest
     needs: get_python_info
-    if: steps.python_info.outputs.python_path != ""
+    if: ${{ steps.python_info.outputs.python_path }} != ""
     steps:
     - run: |
         echo "Python was found here: ${{ needs.get_python_info.outputs.python_path }}"
