--- a/.github/workflows/test3.yml
+++ b/.github/workflows/test3.yml
@@ -57,7 +57,7 @@ jobs:
   complain_about_python_2:
     runs-on: ubuntu-latest
     needs: get_python_info
-    if: "${{ contains(needs.get_python_info.outputs.python_version, 'Python 2' }}"
+    if: "${{ contains(needs.get_python_info.outputs.python_version, 'Python 2') }}"
     steps:
       - run: |
           echo "Why are you still using Python 2?"
