--- a/.github/workflows/test3.yml
+++ b/.github/workflows/test3.yml
@@ -14,6 +14,8 @@ name: 3 - What Version Of Python is In There?
           - amazonlinux
           - clearlinux
           - python
+      test:
+        type: environment
 jobs:
   get_python_info:
     runs-on: ubuntu-latest
