--- a/.github/workflows/test3.yml
+++ b/.github/workflows/test3.yml
@@ -32,6 +32,8 @@ jobs:
               dnf install which -y
             elif apt-get --version; then
               apt-get install which -y
+            elif swupd info; then
+              swupd bundle-add which
             else
               echo "Don't know how to install which"
               exit 33
