--- a/.github/workflows/test1.yml
+++ b/.github/workflows/test1.yml
@@ -6,11 +6,13 @@ on:
       name:
         description: "User's name"     
         required: true
+        type: string
   workflow_call:
     inputs:
       name:
         description: "User's name"     
         required: true
+        type: string
         
 jobs:
   say_hi:
